[project]
name = "ml_scheduler"
version = "1.0.0"
description = "A lightweight machine learning experiments scheduler in a few lines of simple Python"
authors = [
    {name = "Yiwen Hu", email = "1020030101@qq.com"},
]
license = "MIT"
readme = "README.md"
keywords = ["machine learning", "scheduler", "async", "artificial intelligence", "large language model"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "nvitop",
    "pandas",
    "nvitop",
    "typing-extensions",
    "coloredlogs",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "isort>=5.3",
    "pytest>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

