[project]
name = "ml_scheduler"
version = "1.2.0"
description = "A lightweight machine learning experiment scheduler that automates resource management (e.g., GPUs and models) and batch runs experiments with just a few lines of Python code."
authors = [
    {name = "Yiwen Hu", email = "1020030101@qq.com"},
]
license = "MIT"
readme = "README.md"
keywords = ["machine learning", "scheduler", "async", "artificial intelligence", "large language model"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nvitop",
    "pandas",
    "nvitop",
    "typing-extensions",
    "coloredlogs",
    "numpy>=2.0.0",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "isort>=5.3",
    "pytest>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"

[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

